examples/illtyped/bool.gr
data Bool where
  True : Int; -- <- This should be `Bool`
  False : Int
